// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Mintada.Data;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace Mintada.Data.Migrations
{
    [DbContext(typeof(MintadaDbContext))]
    [Migration("20260219020046_InitialSchema")]
    partial class InitialSchema
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.0")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("Mintada.Domain.Entities.CalendarSystem", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.ToTable("calendar_systems");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.CoinType", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<int?>("CalendarSystemId")
                        .HasColumnType("integer");

                    b.Property<int?>("CoinagePeriodId")
                        .HasColumnType("integer");

                    b.Property<DateTime>("DateTimeInserted")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("DenominationText")
                        .HasColumnType("text");

                    b.Property<string>("DenominationUnit")
                        .HasColumnType("text");

                    b.Property<decimal?>("Diameter")
                        .HasColumnType("numeric");

                    b.Property<string>("EdgeImage")
                        .HasColumnType("text");

                    b.Property<int?>("EndDate")
                        .HasColumnType("integer");

                    b.Property<int?>("EndMintDate")
                        .HasColumnType("integer");

                    b.Property<int?>("EndNativeDate")
                        .HasColumnType("integer");

                    b.Property<int>("IssueTypeId")
                        .HasColumnType("integer");

                    b.Property<int>("IssuerId")
                        .HasColumnType("integer");

                    b.Property<int?>("RarityIndex")
                        .HasColumnType("integer");

                    b.Property<int?>("RestrikeEndMintDate")
                        .HasColumnType("integer");

                    b.Property<int?>("RestrikeStartMintDate")
                        .HasColumnType("integer");

                    b.Property<int?>("ShapeId")
                        .HasColumnType("integer");

                    b.Property<string>("Size")
                        .HasColumnType("text");

                    b.Property<int?>("StartDate")
                        .HasColumnType("integer");

                    b.Property<int?>("StartMintDate")
                        .HasColumnType("integer");

                    b.Property<int?>("StartNativeDate")
                        .HasColumnType("integer");

                    b.Property<string>("Subtitle")
                        .HasColumnType("text");

                    b.Property<decimal?>("Thickness")
                        .HasColumnType("numeric");

                    b.Property<string>("Title")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("UrlSlug")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<decimal?>("Weight")
                        .HasColumnType("numeric");

                    b.HasKey("Id");

                    b.HasIndex("CalendarSystemId");

                    b.HasIndex("CoinagePeriodId");

                    b.HasIndex("IssueTypeId");

                    b.HasIndex("ShapeId");

                    b.HasIndex("IssuerId", "IssueTypeId");

                    b.ToTable("coin_types");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.CoinTypeSample", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<int>("CoinTypeId")
                        .HasColumnType("integer");

                    b.Property<string>("ObverseImage")
                        .HasColumnType("text");

                    b.Property<string>("ReverseImage")
                        .HasColumnType("text");

                    b.Property<int>("SampleType")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.HasIndex("CoinTypeId");

                    b.ToTable("coin_type_samples");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.CoinTypesIssuersRulersRel", b =>
                {
                    b.Property<int>("CoinTypeId")
                        .HasColumnType("integer");

                    b.Property<int>("IssuerRulerRelId")
                        .HasColumnType("integer");

                    b.HasKey("CoinTypeId", "IssuerRulerRelId");

                    b.HasIndex("IssuerRulerRelId");

                    b.ToTable("coin_types_issuers_rulers_rel");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.CoinagePeriod", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<int>("IssuerId")
                        .HasColumnType("integer");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("UnitRelationText")
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("IssuerId");

                    b.ToTable("coinage_periods");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.IssueType", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.ToTable("issue_types");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.Issuer", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<bool>("IsHistoricalPeriod")
                        .HasColumnType("boolean");

                    b.Property<bool>("IsSection")
                        .HasColumnType("boolean");

                    b.Property<int?>("IssuerTypeId")
                        .HasColumnType("integer");

                    b.Property<string>("Name")
                        .HasColumnType("text");

                    b.Property<int?>("ParentId")
                        .HasColumnType("integer");

                    b.Property<string>("TerritoryType")
                        .HasColumnType("text");

                    b.Property<string>("UrlSlug")
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("IssuerTypeId");

                    b.HasIndex("ParentId");

                    b.ToTable("issuers");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.IssuerAltName", b =>
                {
                    b.Property<int>("IssuerId")
                        .HasColumnType("integer");

                    b.Property<string>("AltName")
                        .HasColumnType("text");

                    b.HasKey("IssuerId", "AltName");

                    b.ToTable("issuer_alt_names");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.IssuerIssueTypeRel", b =>
                {
                    b.Property<int>("IssuerId")
                        .HasColumnType("integer");

                    b.Property<int>("IssueTypeId")
                        .HasColumnType("integer");

                    b.HasKey("IssuerId", "IssueTypeId");

                    b.HasIndex("IssueTypeId");

                    b.ToTable("issuers_issue_types_rel");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.IssuerType", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.ToTable("issuer_types");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.IssuersRulersRel", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<int?>("GroupId")
                        .HasColumnType("integer");

                    b.Property<int>("IssuerId")
                        .HasColumnType("integer");

                    b.Property<string>("Name")
                        .HasColumnType("text");

                    b.Property<string>("RuleType")
                        .HasColumnType("text");

                    b.Property<int>("RulerId")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.HasIndex("IssuerId");

                    b.HasIndex("RulerId");

                    b.HasIndex("GroupId", "IssuerId");

                    b.ToTable("issuers_rulers_rel");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.IssuersRulersRelGroup", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<int>("IssuerId")
                        .HasColumnType("integer");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("IssuerId");

                    b.ToTable("issuers_rulers_rel_groups");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.Ruler", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Info")
                        .HasColumnType("text");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("PortraitUrl")
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.ToTable("rulers");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.Shape", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<int>("SeqNumber")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.ToTable("shapes");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.CoinType", b =>
                {
                    b.HasOne("Mintada.Domain.Entities.CalendarSystem", "CalendarSystem")
                        .WithMany()
                        .HasForeignKey("CalendarSystemId");

                    b.HasOne("Mintada.Domain.Entities.CoinagePeriod", "CoinagePeriod")
                        .WithMany()
                        .HasForeignKey("CoinagePeriodId");

                    b.HasOne("Mintada.Domain.Entities.IssueType", "IssueType")
                        .WithMany()
                        .HasForeignKey("IssueTypeId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("Mintada.Domain.Entities.Issuer", "Issuer")
                        .WithMany("CoinTypes")
                        .HasForeignKey("IssuerId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("Mintada.Domain.Entities.Shape", "Shape")
                        .WithMany()
                        .HasForeignKey("ShapeId");

                    b.HasOne("Mintada.Domain.Entities.IssuerIssueTypeRel", "IssuerIssueType")
                        .WithMany("CoinTypes")
                        .HasForeignKey("IssuerId", "IssueTypeId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("CalendarSystem");

                    b.Navigation("CoinagePeriod");

                    b.Navigation("IssueType");

                    b.Navigation("Issuer");

                    b.Navigation("IssuerIssueType");

                    b.Navigation("Shape");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.CoinTypeSample", b =>
                {
                    b.HasOne("Mintada.Domain.Entities.CoinType", "CoinType")
                        .WithMany("Samples")
                        .HasForeignKey("CoinTypeId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("CoinType");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.CoinTypesIssuersRulersRel", b =>
                {
                    b.HasOne("Mintada.Domain.Entities.CoinType", "CoinType")
                        .WithMany("IssuerRulerRelations")
                        .HasForeignKey("CoinTypeId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("Mintada.Domain.Entities.IssuersRulersRel", "IssuerRulerRel")
                        .WithMany("CoinTypeRelations")
                        .HasForeignKey("IssuerRulerRelId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("CoinType");

                    b.Navigation("IssuerRulerRel");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.CoinagePeriod", b =>
                {
                    b.HasOne("Mintada.Domain.Entities.Issuer", "Issuer")
                        .WithMany()
                        .HasForeignKey("IssuerId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Issuer");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.Issuer", b =>
                {
                    b.HasOne("Mintada.Domain.Entities.IssuerType", "IssuerType")
                        .WithMany()
                        .HasForeignKey("IssuerTypeId")
                        .OnDelete(DeleteBehavior.Restrict);

                    b.HasOne("Mintada.Domain.Entities.Issuer", "Parent")
                        .WithMany("Children")
                        .HasForeignKey("ParentId")
                        .OnDelete(DeleteBehavior.Restrict);

                    b.Navigation("IssuerType");

                    b.Navigation("Parent");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.IssuerAltName", b =>
                {
                    b.HasOne("Mintada.Domain.Entities.Issuer", "Issuer")
                        .WithMany("AltNames")
                        .HasForeignKey("IssuerId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Issuer");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.IssuerIssueTypeRel", b =>
                {
                    b.HasOne("Mintada.Domain.Entities.IssueType", "IssueType")
                        .WithMany()
                        .HasForeignKey("IssueTypeId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("Mintada.Domain.Entities.Issuer", "Issuer")
                        .WithMany()
                        .HasForeignKey("IssuerId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("IssueType");

                    b.Navigation("Issuer");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.IssuersRulersRel", b =>
                {
                    b.HasOne("Mintada.Domain.Entities.Issuer", "Issuer")
                        .WithMany()
                        .HasForeignKey("IssuerId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("Mintada.Domain.Entities.Ruler", "Ruler")
                        .WithMany()
                        .HasForeignKey("RulerId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("Mintada.Domain.Entities.IssuersRulersRelGroup", "Group")
                        .WithMany("RulerRelations")
                        .HasForeignKey("GroupId", "IssuerId")
                        .HasPrincipalKey("Id", "IssuerId")
                        .OnDelete(DeleteBehavior.Restrict);

                    b.Navigation("Group");

                    b.Navigation("Issuer");

                    b.Navigation("Ruler");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.IssuersRulersRelGroup", b =>
                {
                    b.HasOne("Mintada.Domain.Entities.Issuer", "Issuer")
                        .WithMany()
                        .HasForeignKey("IssuerId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("Issuer");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.CoinType", b =>
                {
                    b.Navigation("IssuerRulerRelations");

                    b.Navigation("Samples");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.Issuer", b =>
                {
                    b.Navigation("AltNames");

                    b.Navigation("Children");

                    b.Navigation("CoinTypes");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.IssuerIssueTypeRel", b =>
                {
                    b.Navigation("CoinTypes");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.IssuersRulersRel", b =>
                {
                    b.Navigation("CoinTypeRelations");
                });

            modelBuilder.Entity("Mintada.Domain.Entities.IssuersRulersRelGroup", b =>
                {
                    b.Navigation("RulerRelations");
                });
#pragma warning restore 612, 618
        }
    }
}
