namespace Mintada.Navigator.Models
{
    public class Period
    {
        public int Id { get; set; }
        public string Name { get; set; } = string.Empty;
    }
}
